# instaui-tdesign

./: pyproject.toml
__tests/: conftest.py  screen.py
__tests/testing_web/: conftest.py  context.py  server.py  style_testing_utils.py  test_anchor.py  test_breadcrumb.py  test_collapse.py  test_dropdown.py  test_input.py  test_locale.py  test_message.py  test_notification.py  test_radio_group.py  test_select.py  test_table.py  test_tabs.py  test_theme.py  test_upload.py
__tests/testing_zero/: conftest.py  test_locale.py  test_theme.py
__tests/utils/: input_utils.py  message_utils.py  notification_utils.py  pagination_utils.py  radio_group_utils.py  select_utils.py  style_testing_utils.py  switch_utils.py  table_utils.py
npm-src/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.tdesign.ts  vite.config.ts
npm-src/scripts/: builder.py
npm-src/src/: main.ts  style.css
npm-src/src/components/: Affix.vue  Anchor.vue  Icon.vue  RadioGroup.vue  Select.vue  Table.vue  affix.ts  anchor.ts  table.ts
npm-src/src/style/: default-theme.css  index.css  table.css
scripts/component_gen/: main_events.py  main_parsed.py  main_types.py
snippets/select/: lang_select.py
snippets/table/: columns_define.py
src/instaui_tdesign/: __init__.py  _settings.py  plugin.py  resources.py  setup.py  symbol.py  types.py
src/instaui_tdesign/_use_tools/: locale.py
src/instaui_tdesign/cdn/: _cdn.py
src/instaui_tdesign/components/: _base_element.py  _icon_param_utils.py  _utils.py  affix.py  alert.py  anchor.py  auto_complete.py  avatar.py  back_top.py  badge.py  (+64 more)
(+16 files in other folders)
