[project]
name = "instaui-tdesign"
version = "0.10.0"
description = "InstaUI TDesign"
keywords = ["ui", "gui", "web", "instaui", "TDesign"]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "CrystalWindSnake", email = "568166495@qq.com" }
]
requires-python = ">=3.10,<3.14"

dependencies = [
    "instaui>=0.11.0",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "web"},
    {include-group = "playwright"},
    {include-group = "lint"},
    {include-group = "git"},
]

playwright = [
    "playwright==1.57.0",
    "pytest-playwright>=0.7.1",
]

test = [
    "fastexcel>=0.16.0",
    "instaui[web]",
    "pandas>=2.0.3",
    "polars>=1.34.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-html>=4.1.1",
]

web = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.33.0",
]

git = [
    "pre-commit>=3.5.0",
]

lint = [
    "ruff==0.12.2",
]

[project.optional-dependencies]
web = ["instaui[web]"]
webview = ["instaui[webview]"]
all = ["instaui[all]"]

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["uv_build>=0.11.13,<0.12"]
build-backend = "uv_build"
